--- a/Week 1-2 - general intro to exploratory modelling/assignment 3 - multimodel_assignment.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/assignment 3 - multimodel_assignment.ipynb
@@ -38,8 +38,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ash add 1 2 3 4 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -113,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
