--- a/Week 1-2 - general intro to exploratory modelling/Practice_file.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/Practice_file.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hello\nHello Francesco how are you?\n"
+    }
+   ],
    "source": [
-    "print(\"hello\")"
+    "print(\"hello\")\n",
+    "\n",
+    "print(\"Hello Francesco how are you?\")"
    ]
   }
  ],
@@ -26,7 +34,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
