--- a/Week 1-2 - general intro to exploratory modelling/Practice_file.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/Practice_file.ipynb
@@ -6,15 +6,20 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "hello\nHello Francesco how are you?\n"
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "Hello Francesco how are you?\n"
+     ]
     }
    ],
    "source": [
     "print(\"hello\")\n",
     "\n",
-    "print(\"Hello Francesco how are you?\")"
+    "print(\"Hello Francesco how are you?\")\n",
+    "\n",
+    "print(\"Veeeery good! And you?\")"
    ]
   }
  ],
