--- a/Week 1-2 - general intro to exploratory modelling/Practice_file.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/Practice_file.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "hello\nHello Francesco how are you?\n"
+     "text": "hello\nHello Francesco how are you?\nWhat happens if I make changes and you make changes to it?\n"
     }
    ],
    "source": [
     "print(\"hello\")\n",
     "\n",
-    "print(\"Hello Francesco how are you?\")"
+    "print(\"Hello Francesco how are you?\")\n",
+    "\n",
+    "print(\"What happens if I make changes and you make changes to it?\")"
    ]
   }
  ],
