End of Assignment 8 and Start of Assignment 9

--- a/Week 5-6 - robustness and direct search/assignment 9 - multi-scenario MORDM.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 9 - multi-scenario MORDM.ipynb
@@ -15,10 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import time\n",
+    "import itertools\n",
+    "from scipy.spatial.distance import pdist \n",
+    "from functools import partial\n",
+    "import multiprocessing\n",
+    "from multiprocessing.dummy import Pool as ThreadPool\n",
+    "import pandas as pd\n",
+    "\n",
+    "from ema_workbench.util.utilities import load_results\n",
+    "\n",
+    "from "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
